--- a/src/app/modules/admin/components/test/test.component.html
+++ b/src/app/modules/admin/components/test/test.component.html
@@ -13,7 +13,9 @@
       <mat-icon>dashboard</mat-icon> Layout
     </a>
     <a mat-list-item routerLinkActive="list-item-active" routerLink="/employee_form"> <mat-icon>note_add</mat-icon> Add Employee</a>
-    <a mat-list-item> <mat-icon>edit</mat-icon> Link 4 </a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/subjects">
+      <mat-icon>edit</mat-icon> Subjects 
+    </a>
     <a mat-list-item> <mat-icon>edit</mat-icon> Link 5 </a>
     <a mat-list-item> <mat-icon>edit</mat-icon> Link 6 </a>
   </mat-nav-list>
